=================================================

(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

** General **

* The Simplifier now supports special "congprocs", using keyword
'congproc' or 'weak_congproc' in the 'simproc_setup' command (or ML
antiquotation of the same name).


** HOL **

* Theory "HOL.Wellfounded":
  - Removed lemma wellorder.wfP_less. Use wellorder.wfp_on_less instead.
    Minor INCOMPATIBILITIES.
  - Renamed lemmas. Minor INCOMPATIBILITY.
      accp_wfPD ~> accp_wfpD
      accp_wfPI ~> accp_wfpI
      wfPUNIVI ~> wfpUNIVI
      wfP_SUP ~> wfp_SUP
      wfP_accp_iff ~> wfp_iff_accp
      wfP_acyclicP ~> wfp_acyclicP
      wfP_def ~> wfp_def
      wfP_empty ~> wfp_empty
      wfP_eq_minimal ~> wfp_eq_minimal
      wfP_if_convertible_to_nat ~> wfp_if_convertible_to_nat
      wfP_if_convertible_to_wfP ~> wfp_if_convertible_to_wfp
      wfP_imp_asymp ~> wfp_imp_asymp
      wfP_imp_irreflp ~> wfp_imp_irreflp
      wfP_induct ~> wfp_induct
      wfP_induct_rule ~> wfp_induct_rule
      wfP_subset ~> wfp_subset
      wfP_trancl ~> wfp_tranclp
      wfP_wf_eq ~> wfp_wf_eq
      wf_acc_iff ~> wf_iff_acc
  - Added lemmas.
      wf_on_antimono_stronger
      wfp_on_antimono_stronger

* Theory "HOL-Library.Multiset":
  - Renamed lemmas. Minor INCOMPATIBILITY.
      wfP_less_multiset ~> wfp_less_multiset
      wfP_multp ~> wfp_multp
      wfP_subset_mset ~> wfp_subset_mset
  - Added lemmas.
      image_mset_diff_if_inj
      minus_add_mset_if_not_in_lhs[simp]

* Transitioinal theory "Divides" moved to "HOL-Library.Divides" and supposed to
be removed in a furure release.  Minor INCOMPATIBILITY.  Import
"HOL-Library.Divides" and keep an eye on theorems prefixed with "Divides." to
ease transition.

* The real-valued versions of ln, log, powr have been totalised by
ln(0) = x and ln(-x) = ln(x). Many related theorems are now